--- a/.gitignore
+++ b/.gitignore
@@ -46,12 +46,18 @@ Temporary Items
 
 
 # ======================
+# Gradle
+# ======================
+
+.gradle
+build
+
+# ======================
 # Eclipse
 # ======================
 
 *.pydevproject
 .metadata
-.gradle
 bin/
 tmp/
 *.tmp
